spring-chat/src/main/java/com/example/springchat/error/OAuth2AuthenticationProcessingException.java
package com.example.springchat.error;

public class OAuth2AuthenticationProcessingException extends Exception {

    public OAuth2AuthenticationProcessingException(String msg) {
        super(msg);
    }
}
